fix: perserve about description whitespaces & handle simmer card text length

--- a/src/css/SimmerPageStyles.css
+++ b/src/css/SimmerPageStyles.css
@@ -1,3 +1,7 @@
 #simmer-page-body {
     min-height: 100vh;
 }
+
+#s-p-description {
+    white-space: pre-wrap;
+}
